# archive.library

./: Cargo.toml  Dockerfile  deploy.sh  k8s_cluster_ip.yml  k8s_deployment.yml  release.sh
migration/: Cargo.toml
migration/src/: lib.rs  m20220228_000001_migration_data.rs  main.rs
src/: app.rs  config.rs  error.rs  lib.rs  main.rs  msg.rs  registry.rs
src/command/: mod.rs
src/database/postgresql/entity/: book.rs  book_tag.rs
src/entity/: book.rs  book_tag.rs  mod.rs
src/model/: book.rs  mod.rs
src/payload/: book.rs  error.rs  mod.rs
src/repository/: mod.rs
src/repository/postgresql/: book.rs
src/repository/trait/: book.rs
src/usecase/: get_book.rs  get_books.rs  get_books_by_ids.rs  mod.rs
